[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/overworld_map.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/map_line_drawer.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ui/map_scroll_container.gd" id="3"]

[node name="OverworldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.07, 0.1, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_constants/separation = 30

[node name="FloorLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Floor 1"
theme_override_font_sizes/font_size = 18

[node name="GoldLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 0"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="PartyInfo" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
script = ExtResource("3")

[node name="MapContent" type="Control" parent="ScrollContainer"]
layout_mode = 2
custom_minimum_size = Vector2(2500, 700)

[node name="LineDrawer" type="Control" parent="ScrollContainer/MapContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="NodeContainer" type="Control" parent="ScrollContainer/MapContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
